MLFlow/postgres-headless_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headerless
  namespace: mlops
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      name: postgres
